@@ -8,6 +8,7 @@
 	* Vampires as player selectable starting race (from Slash'Em)
 
 	* patches:
+	  - Conduct: Elbereth tracking (by Ray Kulhanek)
 	  - Dungeon Map Overview 3 (by Hojita Discordia)
 	  - Extended Conducts v2.3 (by Andreas Dorn)
 	  - Paranoid Patch (by various)
